--- a/rust/.gitignore
+++ b/rust/.gitignore
@@ -1,3 +1,5 @@
+src/old/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/rust,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=rust,linux
 
