--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,3 +10,4 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+unicode-xid = "0.0.4"
