Restarting project with new rust parser library

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,3 +11,8 @@ publish = false
 
 [dependencies]
 unicode-xid = "0.0.4"
+lalrpop-util = "0.19.8"
+regex = "1"
+
+[build-dependencies]
+lalrpop = "0.19.8"
